[gd_scene load_steps=11 format=2]

[ext_resource path="res://minigame/memory/TileMatchGame.gd" type="Script" id=1]
[ext_resource path="res://minigame/memory/MemoryCursor.tscn" type="PackedScene" id=2]
[ext_resource path="res://util/ProgressTimer.tscn" type="PackedScene" id=3]
[ext_resource path="res://util/TutorialTip.tscn" type="PackedScene" id=4]
[ext_resource path="res://util/PausedTutorialTip.gd" type="Script" id=5]
[ext_resource path="res://util/Tutorial.gd" type="Script" id=6]
[ext_resource path="res://util/TutorialLabel.tscn" type="PackedScene" id=7]
[ext_resource path="res://util/DelayedTutorialTip.tscn" type="PackedScene" id=8]
[ext_resource path="res://util/controls/ui_button_accept.tscn" type="PackedScene" id=9]
[ext_resource path="res://util/controls/ui_button_left_right_up_down.tscn" type="PackedScene" id=10]

[node name="MemoryGame" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 654.0
margin_bottom = 1082.0
rect_pivot_offset = Vector2( 1077, -148 )
color = Color( 0.376471, 0.376471, 0.376471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinigameCenter" type="Position2D" parent="."]
position = Vector2( 322, 540 )

[node name="CorrectCards" type="Node2D" parent="."]

[node name="ChosenCards" type="YSort" parent="."]

[node name="ChoiceCards" type="Node2D" parent="."]

[node name="Cursor" parent="." instance=ExtResource( 2 )]
position = Vector2( 85, -517 )

[node name="Tween" type="Tween" parent="."]

[node name="PilePosition" type="Position2D" parent="."]
position = Vector2( 220, 20 )

[node name="ProgressTimer" parent="." instance=ExtResource( 3 )]
position = Vector2( 643, 540 )
rotation = 1.5708
pixel_length = 1000.0

[node name="Tutorial" type="Control" parent="."]
margin_left = 27.0
margin_right = 27.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FirstTimeTooltip_Delayed" type="Control" parent="Tutorial"]
margin_left = -471.0
margin_top = 784.0
margin_right = -471.0
margin_bottom = 784.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FirstTimeTooltip" parent="Tutorial/FirstTimeTooltip_Delayed" instance=ExtResource( 8 )]
visible = false
margin_left = 305.0
margin_top = -553.0
margin_right = 812.0
margin_bottom = -428.0
delay = 0.0

[node name="FirstTimeTooltip_Msg1" parent="Tutorial/FirstTimeTooltip_Delayed" instance=ExtResource( 4 )]
margin_left = -297.0
margin_top = -749.0
margin_right = 325.0
margin_bottom = -586.0

[node name="Label" parent="Tutorial/FirstTimeTooltip_Delayed/FirstTimeTooltip_Msg1" instance=ExtResource( 7 )]
margin_right = 615.0
margin_bottom = 156.0
text = "Find the matches to these tiles to improve the amount
of healing done. Partial matches will give a weaker effect,
but it's better than nothing! Don't let the timer run out
before you finish!"

[node name="Line2D" type="Line2D" parent="Tutorial/FirstTimeTooltip_Delayed/FirstTimeTooltip_Msg1"]
position = Vector2( -740, -435 )
scale = Vector2( 1, 0.725581 )
points = PoolVector2Array( 1361, 683.59, 1497, 667.052 )
width = 3.0
default_color = Color( 0.290196, 0.290196, 0.290196, 1 )

[node name="FirstTimeTooltip_Msg2" parent="Tutorial/FirstTimeTooltip_Delayed" instance=ExtResource( 4 )]
margin_left = -295.0
margin_top = -550.0
margin_right = 369.0
margin_bottom = -235.0

[node name="Label" parent="Tutorial/FirstTimeTooltip_Delayed/FirstTimeTooltip_Msg2" instance=ExtResource( 7 )]
margin_right = 657.0
margin_bottom = 308.0
text = "When you choose a tile it will be placed beneath the closest
matching goal tile. An icon will tell you what effect the
tile had - for Poultice, it will always go in the order:
Heal Strength, Regen Strength, Regen Time
Get a good score on Heal Strength to increase the immediate
effect! A good score on the Regen Strength tile will guarantee 
at least one extra round of healing, while Regen Time will
increase the number of rounds the regen will persist for."

[node name="Line2D" type="Line2D" parent="Tutorial/FirstTimeTooltip_Delayed/FirstTimeTooltip_Msg2"]
position = Vector2( -740, -435 )
scale = Vector2( 1, 0.725581 )
points = PoolVector2Array( 1405, 797.981, 1523, 712.533 )
width = 3.0
default_color = Color( 0.290196, 0.290196, 0.290196, 1 )

[node name="FirstTimeTooltip_Msg3" parent="Tutorial/FirstTimeTooltip_Delayed" instance=ExtResource( 4 )]
margin_left = -295.0
margin_top = -51.0
margin_right = 366.0
margin_bottom = -2.0

[node name="Label" parent="Tutorial/FirstTimeTooltip_Delayed/FirstTimeTooltip_Msg3" instance=ExtResource( 7 )]
margin_right = 654.0
text = "Use                   to highlight a tile, then        to confirm the match."

[node name="ui_accept" parent="Tutorial/FirstTimeTooltip_Delayed/FirstTimeTooltip_Msg3/Label" instance=ExtResource( 9 )]
position = Vector2( 391, 9 )

[node name="ui_leftright" parent="Tutorial/FirstTimeTooltip_Delayed/FirstTimeTooltip_Msg3/Label" instance=ExtResource( 10 )]
position = Vector2( 43, 8 )

[node name="Line2D" type="Line2D" parent="Tutorial/FirstTimeTooltip_Delayed/FirstTimeTooltip_Msg3"]
position = Vector2( -740, -435 )
scale = Vector2( 1, 0.725581 )
points = PoolVector2Array( 1401, 635.353, 1499, 632.597 )
width = 3.0
default_color = Color( 0.290196, 0.290196, 0.290196, 1 )
